--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ ul li a:hover:after{
     /* 웨이브 이미지의 세로값 */
     bottom: 0;
     left: 0;
-    background: url("/img/wave.png");
+    background: url("./img/wave.png");
     animation: animate 8s linear infinite;
 }
 .waveSection .wave:before{
@@ -178,7 +178,7 @@ ul li a:hover:after{
     width: 100%;
     height: 243;
     /* 웨이브 이미지의 세로값 */
-    background: url("/img/wave.png");
+    background: url("./img/wave.png");
     position: absolute;
     bottom: 0;
     opacity: 0.4;
@@ -189,7 +189,7 @@ ul li a:hover:after{
     width: 100%;
     height: 243px;
     /* 웨이브 이미지의 세로값 */
-    background: url("/img/wave.png");
+    background: url("./img/wave.png");
     position: absolute;
     bottom: 0;
     opacity: 0.6;
