--- a/style.css
+++ b/style.css
@@ -159,8 +159,7 @@ ul li a:hover:after{
 .waveSection{
     position: relative;
     width: 100%;
-    height: 50%;
-    background-size: corver;
+    height: 45%;
     background-attachment: fixed;
 }
 .waveSection .wave{
@@ -211,5 +210,69 @@ ul li a:hover:after{
     }
     100%{
         background-position: 0;
+    }
+}
+
+.asdf{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.loader{
+    position: relative;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    background: linear-gradient(#14ffe9, #ffeb3b, #ff00e0);
+    animation: button-animate 1s linear infinite;
+}
+.loader span{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background: linear-gradient(#14ffe9, #ffeb3b, #ff00e0);
+}
+.loader span:nth-child(1){
+    filter: blur(10px);
+}
+.loader span:nth-child(2){
+    filter: blur(20px);
+}
+.loader span:nth-child(3){
+    filter: blur(30px);
+}
+.loader span:nth-child(4){
+    filter: blur(40px);
+}
+.loader:after{
+    content: '';
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    right: 20px;
+    bottom: 20px;
+    background-color: #262626;
+    border-radius: 50%;
+    animation: button-animatea 1s linear infinite;
+    background: url("./img/home.png");
+    
+}
+@keyframes button-animate{
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}
+@keyframes button-animatea{
+    0%{
+        transform: rotate(360deg);
+    }
+    100%{
+        transform: rotate(-deg);
     }
 }
