--- a/sns/style.css
+++ b/sns/style.css
@@ -1,20 +1,29 @@
 .youtube-icon{
+    padding: 12px;
+    width: 90;
+}
+.youtube-icon-img{
     width: 90;
     height: 20;
 }
+.menu{
+    padding: 12px;
+    width: 24px;
+    height: 24px;
+}
 .header{
-    position: sticky;
     display: grid;
     top:0;
     height: 56px;
     padding: 10px;
 }
-.top_{
+.container{
     display: grid;
+    grid-template-columns: 1fr 2fr 150px;
     height: 56px;
-    grid-template-columns: 0.15fr 1fr 1fr 65px 1fr 0.6fr;
     vertical-align: center;
     align-items: center;
+    border-bottom: 1px solid #999;
 }
 .header a{
     text-decoration: none;
@@ -23,7 +32,7 @@
 .serech{
     padding-top: 3px;
     height: 40px;
-    width: 41vw;
+    width: 525px;
     border-radius: 4px 0px 0px 4px;
     border-width: 1px;
     font-size: 110%;
@@ -42,8 +51,43 @@
     height: 45;
     border-radius: 50%;
 }
-.right{
-    display: grid;
-    grid-template-columns: 0.5fr 0.4fr 0.8fr;
+.left{
+    width: 200px;
+    min-width: 180px;
+}
+.mid{
+    width: 700px;
+    text-align: center;
     align-items: center;
+}
+.right{
+    right: 50%;
+    width: 150px;
+    display: grid;
+    grid-template-columns: repeat(4 ,auto);
+    text-align: center;
+    align-items: center;
+}
+
+.bodyer{
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 224px 1fr;
+}
+.guide{
+    background-color: skyblue;
+}
+.video{
+    background-color: greenyellow;
+}
+.renderer a{
+    text-decoration: none;
+    color: black;
+}
+.renderer{
+    display: grid;
+    grid-template-rows: repeat(11, 40px);
+    align-items: center;
+    padding: 12px 24px;
 }
