--- a/sns/style.css
+++ b/sns/style.css
@@ -75,19 +75,72 @@
     display: grid;
     grid-template-columns: 224px 1fr;
 }
-.guide{
-    background-color: skyblue;
-}
-.video{
-    background-color: greenyellow;
-}
 .renderer a{
     text-decoration: none;
     color: black;
+}
+.renderer a i{
+    margin-right: 24;
 }
 .renderer{
     display: grid;
     grid-template-rows: repeat(11, 40px);
     align-items: center;
     padding: 12px 24px;
+}
+.video-section{
+    height: 640px;
+    width: 100%;
+    padding: 20px;
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    grid-template-rows: 320px 320px;
+}
+@media (min-width:1880px) {
+    .video-section{
+        grid-template-columns: repeat(4, auto);
+    }
+}
+.video-section a{
+    text-decoration: none;
+    margin: 10;
+}
+.video{
+    height: 300px;
+    width: 360px;
+    margin-right: 10;
+    margin-left: 10;
+}
+.video .lore{
+    width: 300;
+    display: grid;
+    height: 100px;
+    grid-template-columns: 48px 1fr;
+}
+.video .thumbnail{
+    width: 360;
+    height: 200;
+}
+.video .lore .channel{
+    height: 36;
+    width: 36;
+    border-radius: 50%;
+    margin: 12 12 0 0;
+}
+.video .lore .title{
+    padding: 12 0;
+    width: 300;
+    height: 36;
+    font-size: 1.4rem;
+    font-weight: 500;
+    color: black;
+}
+.video .lore .video-lore-text{
+    width: 300;
+    display: grid;
+    grid-template-rows: 50px 50px;
+    color: #606060;
+}
+.video .lore .video-lore-text div{
+    align-items: center;
 }
