--- a/sns/style.css
+++ b/sns/style.css
@@ -90,15 +90,23 @@
 }
 .video-section{
     height: 640px;
-    width: 100%;
+    min-width: 800;
+    width: calc(100% - 224px);
     padding: 20px;
     display: grid;
-    grid-template-columns: repeat(3, auto);
+    grid-template-columns: repeat(2, auto);
     grid-template-rows: 320px 320px;
+}
+@media (min-width:1480px) {
+    .video-section{
+        grid-template-columns: repeat(3, auto);
+        min-width: 1200;
+    }
 }
 @media (min-width:1880px) {
     .video-section{
         grid-template-columns: repeat(4, auto);
+        min-width: 1600;
     }
 }
 .video-section a{
