--- a/sns/style.css
+++ b/sns/style.css
@@ -96,6 +96,24 @@
     color: black;
     background-color: rgba(0, 0, 0, .15);
 }
+.subscribe{
+    display: grid;
+    grid-template-rows: repeat(9, 40px);
+    align-items:center;
+    padding: 12 24;
+}
+.subscribe a{
+    height: 24;
+    align-items: center;
+    text-decoration: none;
+    color: black;
+    border-radius: 50%;
+}
+.subscribe a img{
+    height: 24;
+    margin-right: 24;
+    vertical-align: middle;
+}
 .video-section{
     height: 640px;
     min-width: 800;
@@ -165,11 +183,13 @@
     grid-template-rows: 56px 1fr;
 }
 .category{
-    min-width: 900;
+    min-width: 1050;
     text-align: center;
     padding: 14 0;
 }
 .category-button{
+    text-decoration: none;
+    color: black;
     height: 60;
     margin: 0 6;
     padding: 4 12;
@@ -178,6 +198,7 @@
     border-radius: 16px;
 }
 .category-button-main{
+    text-decoration: none;
     color: white;
     height: 60;
     margin: 0 6;
