--- a/sns/style.css
+++ b/sns/style.css
@@ -12,8 +12,6 @@
     height: 24px;
 }
 .header{
-    display: grid;
-    top:0;
     height: 56px;
     padding: 10px;
 }
@@ -21,32 +19,31 @@
     display: grid;
     grid-template-columns: 200px 1fr 200px;
     height: 56px;
-    vertical-align: center;
     align-items: center;
     text-align: center;
-    border-bottom: 1px solid #999;
 }
 .header a{
     text-decoration: none;
     color: black;
 }
 .serech{
-    padding-top: 3px;
-    height: 40px;
+    position: relative;
     width: 525px;
     border-radius: 4px 0px 0px 4px;
     border-width: 1px;
-    font-size: 110%;
+    font-size: 16;
+    padding: 2 6 2 6;
+    height: 40px;
+    font-family: "Roboto";
 }
 #magnifying{
-    text-align: center;
-    margin-left: -6px;
+    margin: 6 0 6 -6;
     width: 40px;
     border:solid;
-    padding: 11px;
+    padding: 11;
     border-width: 1px;
     border-radius: 0px 4px 4px 0px;
-    border-left: none
+    border-left: none;
 }
 .profile{
     height: 45;
@@ -59,6 +56,7 @@
 .mid{
     width: 100%;
     min-width: 620px;
+    height: 56;
 }
 .right{
     right: 50%;
@@ -80,14 +78,34 @@
     color: black;
     padding-left: 24px;
 }
-.renderer a i{
-    margin-right: 24;
-}
 .renderer{
+    width: 215;
+    font-size: 14px;
     display: grid;
     grid-template-rows: repeat(11, 40px);
     align-items: center;
-    padding: 12px 24px 12px 0px;
+    padding: 12px 12px 12px 0px;
+}
+.renderer .hide-guide{
+    display: grid;
+    grid-template-rows: repeat(1, 40px);
+    align-items: center;
+}
+.renderer .hide-guide a:nth-child(1){
+    display: none;
+}
+.renderer .hide-guide a:nth-child(2){
+    display: none;
+}
+.renderer .hide-guide a:nth-child(3){
+    display: none;
+}
+.renderer .hide-guide a:nth-child(4){
+    display: none;
+}
+.renderer a i{
+    font-size: 16px;
+    margin-right: 24;
 }
 .renderer .guide-main{
     display:flex;
