--- a/sns/style.css
+++ b/sns/style.css
@@ -101,7 +101,7 @@ body{
     height: calc(100% - 76px);
     background-color: white;
     overflow: auto;
-    overflow-x: hidden;    
+    overflow-x: hidden;
     position: fixed;
     top: 66;
     left: 8;
@@ -115,13 +115,6 @@ body{
     border: 3px solid transparent;
     border-radius: 10px;
 }
-.renderer a{
-    text-decoration: none;
-    color: black;
-    padding-left: 24px;
-    height: 40;
-    vertical-align: middle;
-}
 .renderer{
     width: 215;
     font-size: 14px;
@@ -129,6 +122,13 @@ body{
     grid-template-rows: repeat(11, 40px);
     align-items: center;
     padding: 12px 0px 12px 0px;
+}
+.renderer a{
+    text-decoration: none;
+    color: black;
+    padding-left: 24px;
+    height: 40;
+    vertical-align: middle;
 }
 .renderer .hide-guide{
     display: grid;
@@ -166,7 +166,7 @@ body{
     padding: 12 24;
 }
 .subscribe a{
-    height: 24;
+    height: 40;
     align-items: center;
     text-decoration: none;
     color: black;
@@ -176,6 +176,32 @@ body{
     height: 24;
     margin-right: 20;
     vertical-align: middle;
+}
+.youtube-more{
+    font-size: 14px;
+    display: grid;
+    grid-template-rows: 35px repeat(6, 40px)
+                        20px repeat(4, 40px);
+    align-items: center;
+    padding: 12 0;
+}
+.youtube-more span{
+    color: #606060;
+    font-size: 14;
+    padding-left: 20;
+}
+.youtube-more a{
+    height: 40;
+    align-items: center;
+    text-decoration: none;
+    color: black;
+    border-radius: 50%;
+    padding-left: 24;
+}
+.youtube-more a i{
+    font-size: 16px;
+    margin-right: 20;
+    padding-top: 12px;
 }
 .video-section{
     position: static;
