--- a/sns/style.css
+++ b/sns/style.css
@@ -69,7 +69,7 @@ body{
     border-left: none;
 }
 .profile{
-    height: 45;
+    width: 32;
     border-radius: 50%;
 }
 .left{
@@ -148,15 +148,11 @@ body{
     display: none;
 }
 .renderer a i{
-    font-size: 16px;
+    font-size: 20;
     margin-right: 20;
-    padding-top: 12px;
+    padding-top: 10px;
 }
 .renderer .guide-main{
-    display:flex;
-    align-items:center;
-    height: 40px;
-    color: black;
     background-color: rgba(0, 0, 0, .15);
 }
 .subscribe{
@@ -173,6 +169,7 @@ body{
     border-radius: 50%;
 }
 .subscribe a img{
+    border-radius: 50%;
     height: 24;
     margin-right: 20;
     vertical-align: middle;
@@ -199,7 +196,7 @@ body{
     padding-left: 24;
 }
 .youtube-more a i{
-    font-size: 16px;
+    font-size: 20;
     margin-right: 20;
     padding-top: 12px;
 }
@@ -217,6 +214,218 @@ body{
     display: grid;
     grid-template-columns: repeat(2, auto);
     grid-template-rows: 320px 320px;
+}
+.account-menu{
+    position: fixed;
+    top: 55;
+    right: 20;
+    width: 300;
+    height: 694;
+    background-color: white;
+    border: 1px solid #dddddd;
+    font-size: 14;
+}
+.account-menu-profile{
+    display: grid;
+    grid-template-columns: 56px 140px;
+    height: 50;
+    padding: 16;
+}
+.account-menu-text{
+    display: grid;
+    grid-template-rows: 22px 28px;
+}
+.account-control{
+    text-decoration: none;
+    color: #065fd4;
+    width: 140;
+    height: 22;
+    margin-top: 6;
+}
+
+.account-menu-channel {
+    display: grid;
+    grid-template-rows: repeat(5, 40px);
+    padding: 8 16;
+    align-items: center;
+    text-decoration: none;
+    border-bottom: 2px solid #e5e5e5;
+}
+.account-menu-channel i{
+    text-align: center;
+    width: 24;
+    font-size: 24;
+    padding-right: 16;
+}
+.account-menu-channel a{
+    display: grid;
+    grid-template-columns: 40px 196px 32px;
+    align-items: center;
+    text-decoration: none;
+    color: black;
+    height: 40;
+}
+
+.account-menu-other{
+    display: grid;
+    grid-template-rows: repeat(8, 40px);
+    padding: 8 16;
+    align-items: center;
+    border-bottom: 2px solid #e5e5e5;
+}
+.account-menu-other i{
+    text-align: center;
+    width: 24;
+    font-size: 24;
+    padding: 8 16 0 0;
+}
+.account-menu-other a{
+    display: grid;
+    grid-template-columns: 40px 196px 32px;
+    align-items: center;
+    text-decoration: none;
+    color: black;
+    height: 40;
+}
+
+.account-menu-limited-mod{
+    height: 40;
+    padding: 8 16;
+}
+.account-menu-limited-mod a{
+    display: grid;
+    grid-template-columns: 236px 32px;
+    align-items: center;
+    text-decoration: none;
+    color: black;
+    height: 40;
+}
+#right-angle{
+    padding: 0 0;
+    font-size: 16;
+    text-align: center;
+}
+@media (max-width:1320px) {
+    .guide{
+        width: 72;
+        overflow: hidden;
+        vertical-align: middle;
+    }
+    .renderer{
+        width: 72;
+        display: grid;
+        grid-template-rows: repeat(4, 74px) 0px 74px;
+        vertical-align: middle;
+    }
+
+    .renderer > a:nth-child(1){
+        display: grid;
+        width: 72;
+        height: 44;
+        padding: 0;
+        margin: 0 0 20 0;
+        grid-template-rows: 30px 14px;
+        text-align: center;
+        background-color: white;
+        font-size: 10px;
+    }
+    .renderer > a:nth-child(1) i{
+        vertical-align: top;
+        padding: 0;
+        margin: 0;
+    }
+
+    .renderer > a:nth-child(2){
+        display: grid;
+        width: 72;
+        height: 44;
+        padding: 0;
+        margin: 0 0 20 0;
+        grid-template-rows: 30px 14px;
+        vertical-align: middle;
+        text-align: center;
+        font-size: 10px;
+    }
+    .renderer > a:nth-child(2) i{
+        padding: 0;
+        margin: 7 0 0 0;
+    }
+    
+    .renderer > a:nth-child(3){
+        display: grid;
+        width: 72;
+        height: 44;
+        padding: 0;
+        margin: 0 0 20 0;
+        grid-template-rows: 30px 14px;
+        vertical-align: middle;
+        text-align: center;
+        font-size: 10px;
+    }
+    .renderer > a:nth-child(3) i{
+        padding: 0;
+        margin: 7 0 0 0;
+    }
+    
+    .renderer > a:nth-child(4){
+        display: grid;
+        width: 72;
+        height: 44;
+        padding: 0;
+        margin: 0 0 20 0;
+        grid-template-rows: 30px 14px;
+        vertical-align: middle;
+        text-align: center;
+        font-size: 10px;
+    }
+    .renderer > a:nth-child(4) i{
+        padding: 0;
+        margin: 7 0 0 0;
+    }
+    
+    .renderer > a:nth-child(6){
+        display: grid;
+        width: 72;
+        height: 44;
+        padding: 0;
+        margin: 0 0 20 0;
+        grid-template-rows: 30px 14px;
+        vertical-align: middle;
+        text-align: center;
+        font-size: 10px;
+    }
+    .renderer > a:nth-child(6) i{
+        padding: 0;
+        margin: 7 0 0 0;
+    }
+    .renderer .guide-main{
+        display:flex;
+        align-items:center;
+        height: 40px;
+        color: black;
+    }
+
+    .shorts-guide-hide{
+        display: none;
+        visibility: hidden;
+    }   
+
+    .hide-guide a{
+        display: none;
+    }
+
+    .subscribe{
+        display: none;
+    }
+
+    .video-section{
+        margin-left: 72;
+        margin-top: 125;
+    }
+
+    .youtube-more{
+        display: none;
+    }
 }
 @media (min-width:1480px) {
     .video-section{
