--- a/sns/style.css
+++ b/sns/style.css
@@ -1,5 +1,5 @@
 html{
-    height: calc(100% + 76px);
+    
 }
 body::-webkit-scrollbar {
     width: 14;
@@ -45,18 +45,27 @@ body{
     text-align: center;
     border-bottom: rgba(96, 96, 96, .3) solid 1px;
 }
+@media (max-width: 630px) {
+    .container{
+        grid-template-columns: 200px calc(100% - 400px) 200px;
+    }
+    .mid{
+        visibility:hidden;
+    }
+}
 .header a{
     text-decoration: none;
     color: black;
 }
 .serech{
     position: relative;
-    width: 525px;
+    width: calc(100% - 300px);
     border-radius: 4px 0px 0px 4px;
     border-width: 1px;
     font-size: 16;
     padding: 2 6 2 10;
     height: 40px;
+    max-width: 550;
     font-family: "Roboto";
 }
 #magnifying{
@@ -78,7 +87,7 @@ body{
 }
 .mid{
     width: 100%;
-    min-width: 620px;
+    min-width: 200px;
     height: 56;
 }
 .right{
@@ -305,6 +314,99 @@ body{
     font-size: 16;
     text-align: center;
 }
+@media (min-width:1480px) {
+    .video-section{
+        grid-template-columns: repeat(3, auto);
+        min-width: 1200;
+    }
+}
+@media (min-width:1880px) {
+    .video-section{
+        grid-template-columns: repeat(4, auto);
+        min-width: 1600;
+    }
+}
+.video-section a{
+    text-decoration: none;
+    margin: 10;
+}
+.video{
+    height: 300px;
+    width: 360px;
+    margin-right: 10;
+    margin-left: 10;
+}
+.video .lore{
+    width: 300;
+    display: grid;
+    height: 100px;
+    grid-template-columns: 48px 1fr;
+}
+.video .thumbnail{
+    width: 360;
+    height: 200;
+}
+.video .lore .channel{
+    height: 36;
+    width: 36;
+    border-radius: 50%;
+    margin: 12 12 0 0;
+}
+.video .lore .title{
+    padding: 12 0;
+    width: 300;
+    height: 36;
+    font-size: 1.4rem;
+    font-weight: 500;
+    color: black;
+}
+.video .lore .video-lore-text{
+    width: 300;
+    display: grid;
+    grid-template-rows: 50px 50px;
+    color: #606060;
+}
+.video .lore .video-lore-text div{
+    align-items: center;
+}
+.video-field{
+    display: grid;
+    grid-template-rows: 56px 1fr;
+}
+.category{
+    position: fixed;
+    background-color: white;
+    top: 66;
+    left: 240;
+    width: calc(100% - 240px);
+    height: 56;
+    text-align: center;
+    overflow: hidden;
+    line-height: 50px;
+}
+.category-button{
+    text-decoration: none;
+    color: black;
+    height: 20;
+    margin: 0 6;
+    padding: 4 12;
+    font-size: 14px;
+    border: 1px solid #999;
+    border-radius: 16px;
+    vertical-align: middle;
+}
+.category-button-main{
+    text-decoration: none;
+    color: white;
+    height: 20;
+    margin: 0 6;
+    padding: 4 12;
+    font-size: 14px;
+    border: 1px solid #999;
+    border-radius: 16px;
+    background-color: black;
+    vertical-align: middle;
+}
 @media (max-width:1320px) {
     .guide{
         width: 72;
@@ -426,97 +528,10 @@ body{
     .youtube-more{
         display: none;
     }
-}
-@media (min-width:1480px) {
-    .video-section{
-        grid-template-columns: repeat(3, auto);
-        min-width: 1200;
+
+
+    .category{
+        left: 82;
+        width: calc(100% - 82px);
     }
-}
-@media (min-width:1880px) {
-    .video-section{
-        grid-template-columns: repeat(4, auto);
-        min-width: 1600;
-    }
-}
-.video-section a{
-    text-decoration: none;
-    margin: 10;
-}
-.video{
-    height: 300px;
-    width: 360px;
-    margin-right: 10;
-    margin-left: 10;
-}
-.video .lore{
-    width: 300;
-    display: grid;
-    height: 100px;
-    grid-template-columns: 48px 1fr;
-}
-.video .thumbnail{
-    width: 360;
-    height: 200;
-}
-.video .lore .channel{
-    height: 36;
-    width: 36;
-    border-radius: 50%;
-    margin: 12 12 0 0;
-}
-.video .lore .title{
-    padding: 12 0;
-    width: 300;
-    height: 36;
-    font-size: 1.4rem;
-    font-weight: 500;
-    color: black;
-}
-.video .lore .video-lore-text{
-    width: 300;
-    display: grid;
-    grid-template-rows: 50px 50px;
-    color: #606060;
-}
-.video .lore .video-lore-text div{
-    align-items: center;
-}
-.video-field{
-    display: grid;
-    grid-template-rows: 56px 1fr;
-}
-.category{
-    position: fixed;
-    background-color: white;
-    top: 66;
-    left: 240;
-    width: calc(100% - 240px);
-    height: 56;
-    text-align: center;
-    overflow: hidden;
-    line-height: 50px;
-}
-.category-button{
-    text-decoration: none;
-    color: black;
-    height: 20;
-    margin: 0 6;
-    padding: 4 12;
-    font-size: 14px;
-    border: 1px solid #999;
-    border-radius: 16px;
-    vertical-align: middle;
-}
-.category-button-main{
-    text-decoration: none;
-    color: white;
-    height: 20;
-    margin: 0 6;
-    padding: 4 12;
-    font-size: 14px;
-    border: 1px solid #999;
-    border-radius: 16px;
-    background-color: black;
-    vertical-align: middle;
 }
