--- a/sns/style.css
+++ b/sns/style.css
@@ -1,4 +1,6 @@
-
+a{
+    cursor: pointer;
+}
 .account-menu::-webkit-scrollbar {
     width: 14;
 }
@@ -69,8 +71,6 @@ body{
     color: black;
 }
 .serech{
-    position: relative;
-    top: 8;
     width: calc(100% - 300px);
     border-radius: 4px 0px 0px 4px;
     border-width: 1px;
@@ -80,20 +80,19 @@ body{
     max-width: 550;
     font-family: "Roboto";
 }
-.microphone{
-    position: relative;
-    top: 7;
-}
-#magnifying{
-    position: relative;
-    top: 8;
-    margin: 0 0 0 -6;
-    width: 40px;
+.magnifying{
+    cursor: pointer;
+    padding: 1 6;
+    width: 50;
+    height: 40;
+    align-items: center;
     border:solid;
-    padding: 11;
     border-width: 1px;
     border-radius: 0px 4px 4px 0px;
     border-left: none;
+}
+.microphone{
+    margin: 0 18;
 }
 .profile{
     width: 32;
@@ -104,9 +103,14 @@ body{
     min-width: 180px;
 }
 .mid{
+    display: flex;
+    justify-content:center;
     width: 100%;
-    min-width: 200px;
+    min-width: 200px;   
     height: 56;
+    vertical-align: middle;
+    align-items: center;
+    text-align: center;
     
 }
 .right{
