--- a/sns/style.css
+++ b/sns/style.css
@@ -122,13 +122,16 @@ body{
     width: 210;
     height: 220;
     border: 1px solid #dddddd;
+    overflow: auto;
+    overflow-x: hidden;
+    max-height: calc(100% - 65px);
 }
 .youtube-app-menu a{
     cursor: pointer;
     display: grid;
     grid-template-columns: 40px 1fr;
     height: 38;
-    padding: 8 32 8 16;
+    padding: 8 16;
 }
 .youtube-app-menu a img{
     width: 24;
@@ -138,6 +141,7 @@ body{
 .youtube-app-menu a span{
     margin: auto 0;
     font-size: 14;
+    width: 122;
 }
 
 .bodyer{
@@ -147,7 +151,7 @@ body{
     grid-template-columns: 224px 1fr;
 }
 .guide{
-    width: 232;
+    width: 230;
     height: calc(100% - 76px);
     background-color: white;
     overflow: auto;
@@ -156,17 +160,7 @@ body{
     top: 66;
     left: 8;
 }
-.guide::-webkit-scrollbar {
-    width: 14;
-}
-.guide::-webkit-scrollbar-thumb {
-    background: #606060;
-    background-clip: padding-box;
-    border: 3px solid transparent;
-    border-radius: 10px;
-}
 .renderer{
-    width: 215;
     font-size: 14px;
     display: grid;
     grid-template-rows: repeat(11, 40px);
@@ -271,16 +265,19 @@ body{
     position: fixed;
     top: 65;
     right: 145;
-    width: 230;
+    width: 250;
     height: 80;
     padding: 8 0;
     background: white;
     border: 1px solid #dddddd;
+    overflow: auto;
+    overflow-x: hidden;
+    max-height: calc(100% - 79px);
 }
 .upload-menu a{
     display: grid;
-    height: 50%;
-    grid-template-columns: 40px 1fr;
+    height: 40;
+    grid-template-columns: 40px auto;
     padding: 0 16;
     align-items: center;
     text-decoration: none;
@@ -301,7 +298,13 @@ body{
     background-color: white;
     width: 478;
     height: 640;
+    max-height: calc(100% - 65px);
     border: 1px solid #dddddd;
+}
+.notification-video-section{
+    overflow: auto;
+    overflow-x: hidden;
+    height: calc(100% - 50px);
 }
 .notification-menu-text{
     display: grid;
@@ -322,10 +325,6 @@ body{
     margin: 8 8;
 }
 
-.notification-menu-bar{
-    overflow: scroll;
-    overflow-x: hidden;
-}
 .notification-vide{
     cursor: pointer;
     display: grid;
@@ -362,8 +361,6 @@ body{
     background-color: white;
     border: 1px solid #dddddd;
     font-size: 14;
-    overflow:visible;
-    overflow-x: hidden;
     max-height: calc(100% - 65px);
 }
 .account-menu-profile{
@@ -373,14 +370,14 @@ body{
     height: 50;
     padding: 16;
     background-color: white;
-    position: fixed;
-    top: 55;
+    border-bottom: 1px solid #dddddd;
 }
 .account-menu-setting{
-    margin-top: 82;
     background-color: white;
-    overflow: auto;
     height: 612;
+    overflow: auto;
+    overflow-x: hidden;
+    height: calc(100% - 82px);
 }
 .account-menu-text{
     display: grid;
@@ -456,6 +453,8 @@ body{
     color: black;
     height: 40;
 }
+
+
 #right-angle{
     padding: 0 0;
     font-size: 16;
@@ -488,14 +487,15 @@ body{
 .video .lore .video-lore-text{
     width: 100%;
     display: grid;
-    grid-template-rows: 46px 54px;
+    grid-template-rows: auto 54px;
     color: #606060;
     overflow: hidden;
     word-break: break-all;
 }
 .video .lore .video-lore-text .title{
-    display: -webkit-box;
     vertical-align: middle;
+    max-height: 18;
+    text-align: center;
     
     text-align: left;
     margin: auto 0;
@@ -508,9 +508,10 @@ body{
     width: calc(100% - 24px);
 
     /* 2줄 넘으면 자르기 */
+    display: -webkit-box;
     text-overflow: ellipsis;
     white-space: normal;
-    line-height: 1.2;
+    line-height: 1.25;
     height: 3.6em;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
@@ -527,8 +528,8 @@ body{
     position: fixed;
     background-color: white;
     top: 66;
-    left: 240;
-    width: calc(100% - 240px);
+    left: 238;
+    width: calc(100% - 246px);
     height: 56;
     text-align: center;
     overflow: hidden;
@@ -684,7 +685,7 @@ body{
 
     .category{
         left: 82;
-        width: calc(100% - 82px);
+        width: calc(100% - 90px);
     }
 }
 @media (max-width:1150px) {
