--- a/sns/style.css
+++ b/sns/style.css
@@ -1,3 +1,6 @@
+*{
+    font-family: "Roboto","Arial",sans-serif;
+}
 a{
     cursor: pointer;
 }
@@ -385,7 +388,6 @@ body{
     grid-template-rows: 22px 28px;
 }
 .account-name{
-    font-family: "Roboto","Arial",sans-serif;
     font-size: 16;
 }
 .account-control{
@@ -503,7 +505,6 @@ body{
     overflow: hidden;
     margin-right: 24;
     font-size: 16px;
-    font-family: "Roboto","Arial",sans-serif;
     color: black;
     width: calc(100% - 24px);
 
