--- a/sns/videoStyle.css
+++ b/sns/videoStyle.css
@@ -1,3 +1,6 @@
+*{
+    font-family: "Roboto","Arial",sans-serif;
+}
 a{
     cursor: pointer;
 }
@@ -127,23 +130,42 @@ body{
 
 .moreVideo{
     padding: 24 24 0 0;
-    background-color: greenyellow;
 }
 .watch{
-    background-color: skyblue;
     padding: 24 24 0 24;
 }
 
 .info1{
     padding: 20 0 8 0;
+    height: 66;
 }
 .viewButton{
     display: grid;
-    grid-template-columns: 15% 1fr;
+    grid-template-columns: 35% 1fr;
+    height: 40;
 }
 .button{
     display: grid;
-    grid-template-columns: repeat(7, auto);
+    grid-template-columns: repeat(8, auto);
+    margin: auto 0;
+    font-size: 14;
+}
+.button a{
+    display: grid;
+    grid-template-columns: 36px 1fr;
+    height: 40;
+    margin: auto;
+    padding-right: 8;
+}
+.button i{
+    text-align: center;
+    margin-top: 8;
+    font-size: 24;
+}
+.button span{
+    margin: auto;
+    /* 글자 & 아이콘 정렬 */
+    letter-spacing: .8;
 }
 
 .channel{
@@ -155,4 +177,47 @@ body{
     width: 48;
     height: 48;
     border-radius: 50%;
+}
+
+.title{
+    font-size: 18;
+    height: 26;
+}
+.view{
+    font-size: 14;
+    color: #606060;
+    margin: auto 0;
+}
+
+.name{
+    font-size: 14;
+}
+
+.subscriber{
+    font-size: 12;
+    color: #606060
+}
+
+.text{
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+}
+.name{
+    margin: auto 0;
+}
+.subscriber{
+    margin: auto 0;
+}
+
+.subButton{
+    font-size: 14;
+    height: 20;
+    padding: 10 16;
+    margin: auto auto;
+}
+.notice{
+    height: 24;
+    font-size: 24;
+    padding: 8;
+    margin: auto auto;
 }
