--- a/sns/videoStyle.css
+++ b/sns/videoStyle.css
@@ -138,17 +138,20 @@ body{
 .info1{
     padding: 20 0 8 0;
     height: 66;
+    border-bottom: 1px solid #d3d3d3;
 }
 .viewButton{
     display: grid;
-    grid-template-columns: 35% 1fr;
+    grid-template-columns: repeat(2, auto);
     height: 40;
+    max-height: 40;
 }
 .button{
     display: grid;
     grid-template-columns: repeat(8, auto);
     margin: auto 0;
     font-size: 14;
+    min-width: 620;
 }
 .button a{
     display: grid;
@@ -168,9 +171,17 @@ body{
     letter-spacing: .8;
 }
 
+.info2{
+    margin-bottom: 24;
+    padding-bottom: 16;
+    padding-top: 16;
+    border-bottom: 1px solid #d3d3d3;
+}
+
 .channel{
     display: grid;
     grid-template-columns: 64px auto 75px 40px;
+    margin-bottom: 20;
 }
 
 .channel img{
@@ -187,6 +198,8 @@ body{
     font-size: 14;
     color: #606060;
     margin: auto 0;
+    overflow: hidden;
+    max-height: 19;
 }
 
 .name{
@@ -220,4 +233,106 @@ body{
     font-size: 24;
     padding: 8;
     margin: auto auto;
+}
+
+.loreSection{
+    margin: 0 0 24 64;
+}
+
+.lore{
+    font-size: 14;
+    height: 52;
+    overflow: hidden;
+}
+.moreLore{
+    cursor: pointer;
+    font-size: 12;
+    color: #606060;
+    width: 36;
+    height: 18;
+    border: none;
+    padding: 0;
+    margin-top: 8;
+}
+
+.commentHeader{
+    display: flex;
+    margin-bottom: 24;
+}
+
+
+.commentCount{
+    flex-basis: 102px;
+    font-size: 16;
+    width: 70;
+}
+.commentFilter{
+    cursor: pointer;
+    flex-basis: 94px;
+}
+
+.commentAdd{
+    display: grid;
+    grid-template-columns: 60px 1fr;
+    height: 40;
+    margin-right: 16;
+    margin-bottom: 28;
+}
+.commentInput{
+    position: relative;
+    top: 0;
+    width: 100%;
+    height: 25;
+    font-family: "Roboto";
+    border: none;
+    border-bottom: 1px solid #909090;
+}
+.commentInput:focus{
+    border: none;
+    outline: none;
+    border-bottom: 2px solid black;
+}
+
+.comment{
+    display: grid;
+    grid-template-columns: 56px 1fr;
+    height: 80;
+    margin-bottom: 24;
+}
+.commentInfo{
+    display: grid;
+    grid-template-rows: 23 23 34;
+}
+
+.commentText{
+    display: flex;
+    height: 20;
+}
+.commentName{
+    margin-right: 5;
+    font-size: 13;
+}
+.commentDate{
+    font-size: 12;
+    color: #606060;
+}
+.commentContents{
+    display: flex;
+    height: 20;
+    font-size: 16;
+}
+.commentButton{
+    display: flex;
+    height: 34;
+}
+.commentButton a{
+    margin: auto 0;
+    margin-right: 12;
+    font-size: 12;
+}
+.commentButton a:nth-child(3){
+    padding: 8 16;
+}
+.commentButton a i{
+    font-size: 16;
 }
