--- a/sns/videoStyle.css
+++ b/sns/videoStyle.css
@@ -358,12 +358,14 @@ body{
     transition-duration: 0.15s;
     transition-timing-function: cubic-bezier(0.05,0,0,1);
     will-change: auto;
+    
+    user-select:none;
 }
 .category a{
     text-decoration: none;
     color: black;
     height: 20;
-    margin: 0 4;
+    margin-right: 8;
     padding: 6 12;
     font-size: 14px;
     border: 1px solid #999;
@@ -399,6 +401,30 @@ body{
     line-height: 32px;
 }
 
+.back{
+    display: grid;
+    grid-template-columns: 32px 30px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 48;
+}
+.back-button{
+    width: 32;
+    height: 32;
+    font-size: 16;
+    text-align: center;
+    background-color: white;
+    line-height: 48px;
+    margin: 8 0;
+}
+.back-gradient{
+    background-image: linear-gradient(to left, rgba(255, 255, 255, 0.5), white, white);
+}
+.back-button i{
+    line-height: 32px;
+}
+
 .contents-video{
     margin-top: 12;
 }
@@ -425,4 +451,16 @@ body{
 }
 .contents-thumbnail img{
     width: 168;
+}
+
+@media (max-width:1000px) {
+    .moreVideo{
+        display: none;
+    }
+    .main{
+        grid-template-columns: 1fr;
+    }
+    .watch{
+        min-width: 420;
+    }
 }
