--- a/sns/style.css
+++ b/sns/style.css
@@ -72,7 +72,7 @@ body{
 .video .lore .video-lore-text{
     width: 100%;
     display: grid;
-    grid-template-rows: auto 54px;
+    grid-template-rows: auto 1fr;
     color: #606060;
     overflow: hidden;
     word-break: break-all;
@@ -81,9 +81,10 @@ body{
     vertical-align: middle;
     max-height: 18;
     text-align: center;
+    line-height: 36px;
     
     text-align: left;
-    margin: auto 0;
+    margin: 6 0;
     max-height: 36px;
     overflow: hidden;
     margin-right: 24;
@@ -96,7 +97,6 @@ body{
     text-overflow: ellipsis;
     white-space: normal;
     line-height: 1.25;
-    height: 3.6em;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
 }
@@ -104,16 +104,24 @@ body{
     display: grid;
     grid-template-rows: 56px 1fr;
 }
-.category{
+.category-container{
     position: fixed;
-    background-color: white;
     top: 66;
-    left: 238;
-    width: calc(100% - 246px);
+    left: 258;
+    overflow: hidden;
+    width: calc(100% - 286px);
+}
+.category{
     height: 56;
     text-align: center;
-    overflow: hidden;
     line-height: 50px;
+    width: 1650;
+
+    transition-duration: 0.15s;
+    transition-timing-function: cubic-bezier(0.05,0,0,1);
+    will-change: auto;
+    
+    user-select:none;
 }
 .category-button{
     text-decoration: none;
@@ -138,19 +146,66 @@ body{
     background-color: black;
     vertical-align: middle;
 }
+.next{
+    display: grid;
+    grid-template-columns: 30px 32px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 48;
+}
+.next-button{
+    width: 32;
+    height: 32;
+    font-size: 16;
+    text-align: center;
+    background-color: white;
+    line-height: 48px;
+    margin: 8 0;
+}
+.next-gradient{
+    background-image: linear-gradient(to right, rgba(255, 255, 255, 0.5), white, white);
+}
+.next-button i{
+    line-height: 32px;
+}
+
+.back{
+    display: grid;
+    grid-template-columns: 32px 30px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 48;
+}
+.back-button{
+    width: 32;
+    height: 32;
+    font-size: 16;
+    text-align: center;
+    background-color: white;
+    line-height: 48px;
+    margin: 8 0;
+}
+.back-gradient{
+    background-image: linear-gradient(to left, rgba(255, 255, 255, 0.5), white, white);
+}
+.back-button i{
+    line-height: 32px;
+}
 @media (max-width:1320px) {
     .video-section{
         margin-left: 72;
     }
 
-    .category{
-        left: 82;
-        width: calc(100% - 90px);
+    .category-container{
+        left: 102;
+        width: calc(100% - 138px);
     }
 
     .video-section{
         margin-top: 122;
-        width: calc(100% - 112px);
+        width: calc(100% - 122px);
         grid-template-rows: repeat(2, auto);
     }
 }
@@ -167,9 +222,10 @@ body{
         grid-template-rows: repeat(3, auto);
         width: calc(100% - 40px);
     }
-    .category{
-        left: 8;
-        width: calc(100% - 16px);
+
+    .category-container{
+        left: 28;
+        width: calc(100% - 56px);
     }
     .video .lore .video-lore-text .title{
         font-size: 14;
@@ -192,6 +248,7 @@ body{
     }
     .video .lore .video-lore-text .title{
         font-size: 14;
+        min-height: 38;
     }
     .video .lore .video-lore-text .video-info{
         align-items: center;
