--- a/element/element.css
+++ b/element/element.css
@@ -79,10 +79,6 @@
     font-weight: 600;
 }
 
-.element-box{
-    margin: auto auto;
-}
-
 .lore{
     position: fixed;
 
@@ -107,11 +103,15 @@
     padding: 8px;
 }
 
+.lore-box{
+}
+
 .lore-element{
     width: 100%;
     height: 0;
     padding-bottom: 100%;
     background-color: red;
+    border-radius: 12px;
 
     display: grid;
     grid-row-gap: 8px;
@@ -150,4 +150,27 @@
 .lore-Ename{
     font-size: 2.5vw;
     
+}
+
+.explanation{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas: "a a" "c b";
+
+    margin: 12;
+    font-size: 20;
+}
+.text{
+    grid-column: span 2;
+
+    background-color: skyblue;
+}
+.picture{
+    grid-area: b;
+    
+}
+.picture img{
+    width: 150;
+    height: 150;
 }
