--- a/3d/3d.css
+++ b/3d/3d.css
@@ -10,7 +10,7 @@ body{
     width: 300;
     height: 300;
     transform-style: preserve-3d;
-    transform: rotateX(-30deg);
+    transform: rotateX(-30deg) rotateY(-45deg);
     /*
     animation: animate 4s linear infinite;
     */
@@ -30,6 +30,12 @@ body{
     width: 100%;
     height: 100%;
     transform-style: preserve-3d;
+    
+    
+    -webkit-user-select:none;
+    -moz-user-select:none;
+    -ms-user-select:none;
+    user-select:none
 }
 .cube div span{
     position: absolute;
@@ -43,6 +49,14 @@ body{
     text-align: center;
     line-height: 300px;
     border: 4px solid red;
+    
+    
+    
+    
+    -webkit-user-select:none;
+    -moz-user-select:none;
+    -ms-user-select:none;
+    user-select:none
 }
 
 .a{
