--- a/element/element.css
+++ b/element/element.css
@@ -80,6 +80,7 @@
 }
 
 .lore{
+    z-index: 10;
     position: fixed;
 
     width: 85%;
@@ -101,9 +102,7 @@
 
     overflow: hidden;
     padding: 8px;
-}
-
-.lore-box{
+    overflow: visible;
 }
 
 .lore-element{
@@ -156,7 +155,6 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
-    grid-template-areas: "a a" "c b";
 
     margin: 12;
     font-size: 20;
@@ -167,10 +165,30 @@
     background-color: skyblue;
 }
 .picture{
-    grid-area: b;
-    
+    width: 100%;
+    height: 100%;
+    margin: auto auto;
 }
-.picture img{
-    width: 150;
-    height: 150;
+.img{
+    width: 80%;
+}
+.exitButton{
+    cursor: pointer;
+    width: 42;
+    height: 42;
+    border-radius: 40%;
+    position:absolute;
+    right: -21;
+    top: -21;
+}
+
+.backboard{
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: none;
+    content: ' ';
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.267);
 }
