--- a/element/element.css
+++ b/element/element.css
@@ -119,7 +119,7 @@
 }
 .lore-detail{
     display: grid;
-    grid-template-rows: repeat(auto, 8);
+    grid-template-rows: repeat(auto, 2);
 }
 .lore-detail > div{
     font-size: 20;
@@ -129,7 +129,7 @@
     font-weight: bold;
 
     display: grid;
-    grid-template-columns: 120px auto;
+    grid-template-columns: 100px auto;
 }
 .value{
     font-weight: normal;
@@ -152,17 +152,8 @@
 }
 
 .explanation{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-
-    margin: 12;
+    margin: 24;
     font-size: 20;
-}
-.text{
-    grid-column: span 2;
-
-    background-color: skyblue;
 }
 .picture{
     width: 100%;
@@ -170,7 +161,8 @@
     margin: auto auto;
 }
 .img{
-    width: 80%;
+    width: 100%;
+    margin-top: 12;
 }
 .exitButton{
     cursor: pointer;
@@ -180,15 +172,17 @@
     position:absolute;
     right: -21;
     top: -21;
+    font-weight: bold;
+    font-size: 24;
 }
 
 .backboard{
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     display: none;
     content: ' ';
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.267);
+    background-color: rgba(0, 0, 0, 0.255);
 }
