--- a/element/element.css
+++ b/element/element.css
@@ -1,10 +1,15 @@
 .body{
+    display: flex;
+    background-color: #050505;
+    justify-content: center;
+    align-items: center;
 }
 .background{
+    position: relative;
     display: grid;
     align-items: center;
     grid-template-columns: repeat(18, minmax(60px, auto));
-    grid-template-rows: repeat(7, minmax(60px, auto));
+    grid-template-rows: repeat(7, minmax(60px, auto)) 8px repeat(2, minmax(60px, auto));
     gap: 4px;
     margin: auto;
     max-width: 95%;
@@ -16,6 +21,12 @@
 }
 .element-none2{
     grid-column: span 10;
+}
+.element-none3{
+    grid-column: span 2;
+}
+.gap{
+    grid-column: span 18;
 }
 .element-box{
     cursor: pointer;
@@ -53,9 +64,15 @@
 .element-nonmetal{
     background-color: #A0FFA0;
 }
+.element-lanthanum{
+    background-color: #FFBFFF;
+}
+.element-actinium{
+    background-color: #FF99CC;
+}
 
 .number{
-    height: 20%;
+    height: 15%;
     
 }
 .sign{
@@ -65,10 +82,17 @@
     text-align: center;
 }
 .element{
-    height: 30%;
+    word-break:keep-all;
+    height: 35%;
+    line-height: 150%;
     text-align: center;
     font-size: .9vw;
     font-weight: 600;
+    overflow: visible;
+}
+.long{
+    letter-spacing: -0.1em;
+    text-align: left;
 }
 .simple{
     cursor: pointer;
@@ -125,8 +149,6 @@
     grid-template-rows: 0.8fr 1.4fr 1fr 1fr;
     
     text-align: center;
-}
-.lore-detail{
 }
 
 .lore-number{
